--- a/GameStore.WebUI/Views/Game/List.cshtml
+++ b/GameStore.WebUI/Views/Game/List.cshtml
@@ -1,5 +1,10 @@
 ﻿@using GameStore.WebUI.Models
+@using GameStore.WebUI.HtmlHelpers
 @model GamesListViewModel
+
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
 @{
     ViewBag.Title = "Товары";
@@ -7,12 +12,8 @@
 
 @foreach (var p in @Model.Games)
 {
-    <div>
-        <h3>@p.Name</h3>
-        <p>@p.Description</p>
-        <h4>@p.Price.ToString("# руб")</h4>
-    </div>
+   @Html.Partial("GameSummary",p)
 }
-<div>
+<div class="btn-group pull-right">
     @Html.PageLinks(Model.PagingInfo, x => Url.Action("List", new { page = x }))
 </div>
